docs-archive/apache-airflow-providers-opensearch/1.0.0/_sources/_api/airflow/providers/opensearch/operators/opensearch/index.rst.txt
:py:mod:`airflow.providers.opensearch.operators.opensearch`
===========================================================

.. py:module:: airflow.providers.opensearch.operators.opensearch


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.opensearch.operators.opensearch.OpenSearchQueryOperator
   airflow.providers.opensearch.operators.opensearch.OpenSearchCreateIndexOperator
   airflow.providers.opensearch.operators.opensearch.OpenSearchAddDocumentOperator




.. py:class:: OpenSearchQueryOperator(*, query = None, search_object = None, index_name = None, opensearch_conn_id = 'opensearch_default', log_query = True, **kwargs)


   Bases: :py:obj:`airflow.models.BaseOperator`

   Runs a query search against a given index on an OpenSearch cluster and returns results.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:OpenSearchQueryOperator`

   :param: query: A Dictionary Open Search DSL query.
   :param: search_object: A Search object from opensearch-dsl.
   :param: index_name: The name of the index to search for documents.
   :param: opensearch_conn_id: opensearch connection to use
   :param: log_query: Whether to log the query used. Defaults to True and logs query used.

   .. py:attribute:: template_fields
      :type: Sequence[str]
      :value: ['query']

      

   .. py:method:: hook()

      Gets an instance of an OpenSearchHook.


   .. py:method:: execute(context)

      Executes a search against a given index or a Search object on an OpenSearch Cluster.



.. py:class:: OpenSearchCreateIndexOperator(*, index_name, index_body, opensearch_conn_id = 'opensearch_default', **kwargs)


   Bases: :py:obj:`airflow.models.BaseOperator`

   Create a new index on an Open Search cluster with a given index name.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:OpenSearchCreateIndexOperator`

   :param: index_name: The name of the index to be created.
   :param: index_body: A dictionary that defines index settings
   :param: opensearch_conn_id: opensearch connection to use

   .. py:method:: hook()

      Gets an instance of an OpenSearchHook.


   .. py:method:: execute(context)

      Creates an index on an Open Search cluster.



.. py:class:: OpenSearchAddDocumentOperator(*, index_name = None, document = None, doc_id = None, doc_class = None, opensearch_conn_id = 'opensearch_default', **kwargs)


   Bases: :py:obj:`airflow.models.BaseOperator`

   Add a new document to a given Index or overwrite an existing one.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:OpenSearchAddDocumentOperator`

   :param: index_name: The name of the index to put the document.
   :param: document: A dictionary representation of the document.
   :param: document_id: The id for the document in the index.
   :param: doc_class: A Document subclassed object using opensearch-dsl
   :param: opensearch_conn_id: opensearch connection to use

   .. py:method:: hook()

      Gets an instance of an OpenSearchHook.


   .. py:method:: execute(context)

      Saves a document to a given index on an OpenSearch cluster.



